syntax = "proto3";

option go_package = "/spawnerservice";

package spawnerservice;

// The Spawner service definition 
service SpawnerService {
    // Spawn required cluster
    rpc CreateCluster (ClusterRequest) returns (ClusterResponse) {}

    //Create add token to secret manager
    rpc AddToken (AddTokenRequest) returns (AddTokenResponse) {}

    //Create get token to secret manager
    rpc GetToken (GetTokenRequest) returns (GetTokenResponse) {}   

    // Add Route53 record for Caddy
    rpc AddRoute53Record (AddRoute53RecordRequest) returns (AddRoute53RecordResponse) {}

    // Get Cluster
    rpc GetCluster (GetClusterRequest) returns (ClusterSpec) {}

    // Get Clusters
    rpc GetClusters (GetClustersRequest) returns (GetClustersResponse) {}

    // Spawn required instance
    rpc AddNode (NodeSpawnRequest) returns (NodeSpawnResponse) {}

    // Status of cluster
    rpc ClusterStatus (ClusterStatusRequest) returns (ClusterStatusResponse) {}

    // Delete Cluster
    rpc DeleteCluster (ClusterDeleteRequest) returns (ClusterDeleteResponse) {}

    // Delete Node
    rpc DeleteNode (NodeDeleteRequest) returns (NodeDeleteResponse) {}

    //Create Volume
    rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse) {}

    //Delete Vol
    rpc DeleteVolume(DeleteVolumeRequest) returns (DeleteVolumeResponse) {}

    rpc CreateSnapshot( CreateSnapshotRequest) returns (CreateSnapshotResponse) {}

    rpc CreateSnapshotAndDelete(CreateSnapshotAndDeleteRequest) returns (CreateSnapshotAndDeleteResponse) {}

    rpc RegisterWithRancher(RancherRegistrationRequest) returns (RancherRegistrationResponse) {}

    rpc GetWorkspaceCost(GetWorkspaceCostRequest) returns (GetWorkspaceCostResponse) {}
}

message NodeSpec {
    string name = 1;
    string instance = 2;
    int32 diskSize = 3;
    string hostName = 4;
    string state = 5;
    string uuid = 6;
    string ipAddr = 7;
    string availabilityzone = 8;
    string clusterId = 9;
    map<string, string> labels = 10;
    bool gpu_enabled = 11;
}

message ClusterRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
    NodeSpec node = 5;
    map<string, string> labels = 6;
}

message GetClusterRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
}

message GetClustersRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
}

message ClusterSpec {
    string name = 1;
    string clusterId = 2;
    repeated NodeSpec nodeSpec = 3;
}

message GetClustersResponse {
    repeated ClusterSpec clusters = 1;
}

message ClusterResponse {
    string clusterName = 1;
    string nodeGroupName = 2;
    string error = 3;
}

message ClusterStatusRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
}

message ClusterStatusResponse {
    string status = 1;
    string error = 2;
}

message AddTokenRequest{
    string provider = 1;
    string region = 2;
    string clusterName = 3;
}

message AddTokenResponse{
    string status = 1;
    string error =2;
}

message GetTokenRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
}

message GetTokenResponse{
    string token = 1;
    string endpoint = 2;
    string status = 3;
    string error = 4;
    string ca_data = 5;
}

message AddRoute53RecordRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string dnsName = 4;
    string recordName = 5;
}

message AddRoute53RecordResponse{
    string status = 1;
    string error =2;
}

message NodeSpawnRequest {
    string provider = 1;
    string region =2;
    string accountName = 3;
    string clusterName = 4;
    NodeSpec nodeSpec = 5;
}

message NodeSpawnResponse {
    string error = 2;
}

message ClusterDeleteRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
}

message ClusterDeleteResponse {
    string error = 1;
}

message NodeDeleteRequest {
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string clusterName = 4;
    string nodeGroupName = 5;
}

message NodeDeleteResponse {
    string error = 1;
}

message CreateVolumeRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string availabilityzone = 4;
    string volumetype = 5;
    int64 size = 6;
    string snapshotid = 7; 
    map<string, string> labels = 8;
}

message CreateVolumeResponse{
    string volumeid=1;
    string error=2;
}

message DeleteVolumeRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string volumeid = 4;
}

message DeleteVolumeResponse{
    bool deleted=1;
    string error=2;
}

message CreateSnapshotRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string volumeid = 4;
    map<string, string> labels = 5;
}

message CreateSnapshotResponse{
    string snapshotid=1;
    string error=2;
}

message CreateSnapshotAndDeleteRequest{
    string provider = 1;
    string region = 2;
    string accountName = 3;
    string volumeid = 4;
    map<string, string> labels = 5;
}

message CreateSnapshotAndDeleteResponse{
    string snapshotid = 1;
    bool deleted = 2;
    string error = 3;
}

message RancherRegistrationRequest {
    string clusterName = 1;
}

message RancherRegistrationResponse {
    string error = 1;
    string clusterName = 2;
    string clusterID = 3;
    string manifestURL = 4;
}

message GetWorkspaceCostRequest {
    string workspaceId = 1;
    string provider    = 2;
    string accountName = 3;
    string startDate   = 4;
    string endDate     = 5;
    string granularity = 6;
    string costType    = 7;
    string groupBy     = 8;
}

message GetWorkspaceCostResponse {
    double totalCost = 1;
    repeated GetWorkspaceCostGroupResponse groupedCost = 2;
}

message GetWorkspaceCostGroupResponse {
    string group = 1;
    double cost = 2;
}